--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,2 @@
 clinvar_alleles.single.b38.Pathogenic_and_LikelyPathogenic.vcf 
+clinvar_20190114_GRCh37_onlyPathogenic_and_Likely_pathogenic_ParalogueAnnotated.Rdata
